[package]
name = "janosik"
version = "0.1.2"
authors = ["hjaremko <hjaremko@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.1"
scan_fmt = "0.2"
wait-timeout = "0.2"
chrono = "0.4"

[dependencies.tokio]
version = "0.2"
features = ["macros"]