[package]
name = "janosik"
version = "0.2.2"
authors = ["hjaremko <hjaremko@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.1"
scan_fmt = "0.2"
wait-timeout = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
lazy_static = "1.4.0"

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]
