[package]
name = "janosik"
version = "0.2.5"
authors = ["hjaremko <hjaremko@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.4"
scan_fmt = "0.2.6"
wait-timeout = "0.2.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tracing-futures = "0.2.5"
once_cell = "1.7.2"
async-trait = "0.1.48"
rand = "0.8.3"
simsearch = "0.2.2"

[dependencies.tokio]
version = "1.3.0"
features = ["macros", "rt-multi-thread"]

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]
